--- a/app/src/main/res/layout/dialog_result.xml
+++ b/app/src/main/res/layout/dialog_result.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,7 +24,7 @@
             android:maxHeight="140dip"
             android:maxWidth="140dip"
             android:scaleType="centerCrop"
-            android:src="@drawable/explore_icon"
+            app:srcCompat="@drawable/explore_icon"
             tools:ignore="ContentDescription" />
 
         <TextView
