--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">@dimen/f_qr_box_action_desc</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:background">@null</item>
+        <item name="background">@null</item>
         <item name="android:layout_marginLeft">@dimen/ml_qr_box_action</item>
     </style>
 
