--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
-  <style name="CaptureTheme" parent="android:Theme.Holo">
+
+    <style name="CaptureTheme" parent="Theme.AppCompat">
     <item name="android:windowFullscreen">false</item>
     <item name="android:windowContentOverlay">@null</item>
-    <item name="android:windowActionBarOverlay">true</item>
-    <item name="android:windowActionModeOverlay">true</item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="windowActionModeOverlay">true</item>
   </style>
 </resources>
